tests/extensions/structs/semanticErr/sameStruct.wacc
begin
    struct sa is
        int a
    end

    struct sa is
        int a
    end
end